vote and user relationship