@@ -1,37 +1,37 @@
 package com.UniTime.UniTime.service.impl;
 
 import com.UniTime.UniTime.dto.ScheduleDto;
-import com.UniTime.UniTime.entity.Course;
-import com.UniTime.UniTime.entity.Professor;
-import com.UniTime.UniTime.entity.Room;
-import com.UniTime.UniTime.entity.Schedule;
+import com.UniTime.UniTime.entity.*;
 import com.UniTime.UniTime.exception.NotFoundException;
-import com.UniTime.UniTime.repository.CourseRepository;
-import com.UniTime.UniTime.repository.ProfessorRepository;
-import com.UniTime.UniTime.repository.RoomRepository;
-import com.UniTime.UniTime.repository.ScheduleRepository;
+import com.UniTime.UniTime.repository.*;
 import com.UniTime.UniTime.service.ScheduleService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ScheduleServiceImpl implements ScheduleService {
+
     private final ScheduleRepository scheduleRepository;
     private final ModelMapper mapper;
     private final ProfessorRepository professorRepository;
     private final RoomRepository roomRepository;
     private final CourseRepository courseRepository;
-
+    private final UserRepository userRepository;
 
     @Override
     public ScheduleDto postSchedule(ScheduleDto scheduleDto) {
-        Schedule schedule = mapper.map(scheduleDto, Schedule.class);
+        Schedule schedule = new Schedule();
+
+        schedule.setLectureTitle(scheduleDto.getLectureTitle());
+        schedule.setStartDate(scheduleDto.getStartDate());
+        schedule.setStartTime(scheduleDto.getStartTime());
+        schedule.setEndTime(scheduleDto.getEndTime());
+        schedule.setScheduleDescription(scheduleDto.getScheduleDescription());
 
         if (scheduleDto.getProfessor() != null && scheduleDto.getProfessor().getId() != null) {
             Professor professor = professorRepository.findById(scheduleDto.getProfessor().getId())
@@ -39,7 +39,7 @@ public class ScheduleServiceImpl implements ScheduleService {
             schedule.setProfessor(professor);
         }
 
-        if (scheduleDto.getRoom() != null && scheduleDto.getRoom().getId() != null) { // ✅ Room handling
+        if (scheduleDto.getRoom() != null && scheduleDto.getRoom().getId() != null) {
             Room room = roomRepository.findById(scheduleDto.getRoom().getId())
                     .orElseThrow(() -> new NotFoundException("Room not found"));
             schedule.setRoom(room);
@@ -51,34 +51,42 @@ public class ScheduleServiceImpl implements ScheduleService {
             schedule.setCourse(course);
         }
 
+        if (scheduleDto.getUsers() != null && !scheduleDto.getUsers().isEmpty()) {
+            Set<User> users = scheduleDto.getUsers().stream()
+                    .map(userDto -> userRepository.findById(userDto.getId())
+                            .orElseThrow(() -> new NotFoundException("User not found with ID: " + userDto.getId())))
+                    .collect(Collectors.toSet());
+            schedule.setUsers(users);
+        }
 
         Schedule savedSchedule = scheduleRepository.save(schedule);
-        return savedSchedule.toDto(mapper); // Ensure proper nested mapping
-
-
+        return savedSchedule.toDto(mapper);
     }
 
     @Override
     public List<ScheduleDto> getAllSchedules() {
-        List<Schedule> schedules = scheduleRepository.findAll();
-        if (schedules.isEmpty()) {
-            return new ArrayList<>();
-        } else {
-            return schedules.stream().map(schedule -> schedule.toDto(mapper)).toList();
-        }
+        return scheduleRepository.findAll().stream()
+                .map(schedule -> schedule.toDto(mapper))
+                .collect(Collectors.toList());
     }
 
     @Override
     public ScheduleDto getScheduleById(Long id) {
         Schedule schedule = scheduleRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Schedule not found by this ID"));
+                .orElseThrow(() -> new NotFoundException("Schedule not found with ID: " + id));
         return schedule.toDto(mapper);
     }
 
     @Override
     public ScheduleDto updateSchedule(Long id, ScheduleDto scheduleDto) {
-        Schedule schedule = mapper.map(scheduleDto, Schedule.class);
-        schedule.setScheduleId(id);
+        Schedule schedule = scheduleRepository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Schedule not found with ID: " + id));
+
+        schedule.setLectureTitle(scheduleDto.getLectureTitle());
+        schedule.setStartDate(scheduleDto.getStartDate());
+        schedule.setStartTime(scheduleDto.getStartTime());
+        schedule.setEndTime(scheduleDto.getEndTime());
+        schedule.setScheduleDescription(scheduleDto.getScheduleDescription());
 
         if (scheduleDto.getProfessor() != null && scheduleDto.getProfessor().getId() != null) {
             Professor professor = professorRepository.findById(scheduleDto.getProfessor().getId())
@@ -86,7 +94,7 @@ public class ScheduleServiceImpl implements ScheduleService {
             schedule.setProfessor(professor);
         }
 
-        if (scheduleDto.getRoom() != null && scheduleDto.getRoom().getId() != null) { // ✅ Room handling
+        if (scheduleDto.getRoom() != null && scheduleDto.getRoom().getId() != null) {
             Room room = roomRepository.findById(scheduleDto.getRoom().getId())
                     .orElseThrow(() -> new NotFoundException("Room not found"));
             schedule.setRoom(room);
@@ -98,13 +106,23 @@ public class ScheduleServiceImpl implements ScheduleService {
             schedule.setCourse(course);
         }
 
+        if (scheduleDto.getUsers() != null && !scheduleDto.getUsers().isEmpty()) {
+            Set<User> users = scheduleDto.getUsers().stream()
+                    .map(userDto -> userRepository.findById(userDto.getId())
+                            .orElseThrow(() -> new NotFoundException("User not found with ID: " + userDto.getId())))
+                    .collect(Collectors.toSet());
+            schedule.setUsers(users);
+        }
 
-        Schedule savedSchedule = scheduleRepository.save(schedule);
-        return mapper.map(savedSchedule, ScheduleDto.class);
+        Schedule updatedSchedule = scheduleRepository.save(schedule);
+        return updatedSchedule.toDto(mapper);
     }
 
     @Override
     public Boolean deleteSchedule(Long id) {
+        if (!scheduleRepository.existsById(id)) {
+            throw new NotFoundException("Schedule not found with ID: " + id);
+        }
         scheduleRepository.deleteById(id);
         return true;
     }
